refactor: migrate to package-by-feature architecture and decouple game loop (#97)
* refactor: reorganize package structure and update imports for clarity

Signed-off-by: Anajrim <itroublve99@gmail.com>

* docs: enhance README structure and formatting for improved readability

Signed-off-by: Anajrim <itroublve99@gmail.com>

* docs: small typo

Signed-off-by: Anajrim <itroublve99@gmail.com>

* fix: pet doesn't wake up properly

Signed-off-by: Anajrim <itroublve99@gmail.com>

* chore: add 'out/' directory to .gitignore

Signed-off-by: Anajrim <itroublve99@gmail.com>

---------

Signed-off-by: Anajrim <itroublve99@gmail.com>